docs/dolfin/2016.1.0/python/source/programmers-reference/cpp/la/index.rst
.. Index file for the dolfin.cpp.la module.

.. _programmers_reference_cpp_la_index:

dolfin.cpp.la module
********************

Classes:

.. toctree::
    :maxdepth: 1

    BelosKrylovSolver
    BlockMatrix
    BlockVector
    CoordinateMatrix
    DefaultFactory
    EigenFactory
    EigenKrylovSolver
    EigenLUSolver
    EigenMatrix
    EigenVector
    GenericLUSolver
    GenericLinearAlgebraFactory
    GenericLinearOperator
    GenericLinearSolver
    GenericMatrix
    GenericTensor
    GenericVector
    Ifpack2Preconditioner
    IndexMap
    KrylovSolver
    LUSolver
    LinearAlgebraObject
    LinearOperator
    LinearSolver
    Matrix
    MueluPreconditioner
    NewtonSolver
    NonlinearProblem
    OptimisationProblem
    PETScBaseMatrix
    PETScFactory
    PETScKrylovSolver
    PETScLUSolver
    PETScLinearOperator
    PETScMatrix
    PETScObject
    PETScOptions
    PETScPreconditioner
    PETScSNESSolver
    PETScTAOSolver
    PETScUserPreconditioner
    PETScVector
    SLEPcEigenSolver
    Scalar
    SparsityPattern
    TAOLinearBoundSolver
    TensorLayout
    TpetraFactory
    TpetraMatrix
    TpetraVector
    TrilinosPreconditioner
    Vector
    VectorSpaceBasis
    ufc_cell
    ufc_dofmap
    ufc_finite_element
    ufc_form
    ufc_function

Functions:

.. toctree::
    :maxdepth: 1

    BelosKrylovSolver_default_parameters
    BelosKrylovSolver_methods
    BelosKrylovSolver_preconditioners
    DefaultFactory_factory
    EigenFactory_instance
    EigenKrylovSolver_default_parameters
    EigenKrylovSolver_methods
    EigenKrylovSolver_preconditioners
    EigenLUSolver_default_parameters
    EigenLUSolver_methods
    Ifpack2Preconditioner_default_parameters
    Ifpack2Preconditioner_preconditioners
    KrylovSolver_default_parameters
    LUSolver_default_parameters
    LinearSolver_default_parameters
    MueluPreconditioner_default_parameters
    NewtonSolver_default_parameters
    PETScFactory_instance
    PETScKrylovSolver_default_parameters
    PETScKrylovSolver_methods
    PETScKrylovSolver_preconditioners
    PETScLUSolver_default_parameters
    PETScLUSolver_methods
    PETScObject_petsc_error
    PETScOptions_clear
    PETScOptions_set
    PETScPreconditioner_preconditioners
    PETScSNESSolver_default_parameters
    PETScSNESSolver_methods
    PETScTAOSolver_default_parameters
    PETScTAOSolver_methods
    SLEPcEigenSolver_default_parameters
    TAOLinearBoundSolver_default_parameters
    TAOLinearBoundSolver_krylov_solvers
    TAOLinearBoundSolver_methods
    TAOLinearBoundSolver_preconditioners
    TpetraFactory_instance
    as_backend_type
    get_tensor_type
    has_krylov_solver_method
    has_krylov_solver_preconditioner
    has_lu_solver_method
    has_type
    in_nullspace
    krylov_solver_methods
    krylov_solver_preconditioners
    la_index_dtype
    la_solve
    linear_algebra_backends
    linear_solver_methods
    list_krylov_solver_methods
    list_krylov_solver_preconditioners
    list_linear_algebra_backends
    list_linear_solver_methods
    list_lu_solver_methods
    lu_solver_methods
    normalize
    residual

Module docstring:

.. automodule:: dolfin.cpp.la
   :no-members:
   :no-undoc-members:
   :no-show-inheritance: